src/parser.output
State 342 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator declaration_list compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declarator declaration_list compound_statement
    9                    | declarator compound_statement

   10 declaration_specifiers: storage_class_specifier
   11                       | storage_class_specifier declaration_specifiers
   12                       | type_specifier
   13                       | type_specifier declaration_specifiers
   14                       | type_qualifier
   15                       | type_qualifier declaration_specifiers

   16 type_specifier: VOID
   17               | CHAR
   18               | INT
   19               | FLOAT
   20               | DOUBLE
   21               | SIGNED
   22               | UNSIGNED
   23               | struct_or_union_specifier
   24               | enum_specifier

   25 declarator: pointer direct_declarator
   26           | direct_declarator

   27 direct_declarator: IDENTIFIER
   28                  | '(' declarator ')'
   29                  | direct_declarator '[' constant_expression ']'
   30                  | direct_declarator '[' ']'
   31                  | direct_declarator '(' parameter_type_list ')'
   32                  | direct_declarator '(' identifier_list ')'
   33                  | direct_declarator '(' ')'

   34 compound_statement: '{' '}'
   35                   | '{' statement_list '}'
   36                   | '{' declaration_list '}'
   37                   | '{' declaration_list statement_list '}'

   38 statement_list: statement
   39               | statement_list statement

   40 statement: labeled_statement
   41          | compound_statement
   42          | expression_statement
   43          | selection_statement
   44          | iteration_statement
   45          | jump_statement

   46 jump_statement: CONTINUE ';'
   47               | BREAK ';'
   48               | RETURN ';'
   49               | RETURN expression ';'

   50 expression: assignment_expression
   51           | expression ',' assignment_expression

   52 assignment_expression: conditional_expression
   53                      | unary_expression '=' assignment_expression
   54                      | unary_expression MUL_ASSIGN assignment_expression
   55                      | unary_expression DIV_ASSIGN assignment_expression
   56                      | unary_expression MOD_ASSIGN assignment_expression
   57                      | unary_expression ADD_ASSIGN assignment_expression
   58                      | unary_expression SUB_ASSIGN assignment_expression
   59                      | unary_expression LEFT_ASSIGN assignment_expression
   60                      | unary_expression RIGHT_ASSIGN assignment_expression
   61                      | unary_expression AND_ASSIGN assignment_expression
   62                      | unary_expression XOR_ASSIGN assignment_expression
   63                      | unary_expression OR_ASSIGN assignment_expression

   64 conditional_expression: logical_or_expression
   65                       | logical_or_expression '?' expression ':' conditional_expression

   66 logical_or_expression: logical_and_expression
   67                      | logical_or_expression OR_OP logical_and_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 inclusive_or_expression: exclusive_or_expression
   71                        | inclusive_or_expression '|' exclusive_or_expression

   72 exclusive_or_expression: and_expression
   73                        | exclusive_or_expression '^' and_expression

   74 and_expression: equality_expression
   75               | and_expression '&' equality_expression

   76 equality_expression: relational_expression
   77                    | equality_expression EQ_OP relational_expression
   78                    | equality_expression NE_OP relational_expression

   79 relational_expression: shift_expression
   80                      | relational_expression '<' shift_expression
   81                      | relational_expression '>' shift_expression
   82                      | relational_expression LE_OP shift_expression
   83                      | relational_expression GE_OP shift_expression

   84 shift_expression: additive_expression
   85                 | shift_expression LEFT_OP additive_expression
   86                 | shift_expression RIGHT_OP additive_expression

   87 additive_expression: multiplicative_expression
   88                    | additive_expression '+' multiplicative_expression
   89                    | additive_expression '-' multiplicative_expression

   90 multiplicative_expression: cast_expression
   91                          | multiplicative_expression '*' cast_expression
   92                          | multiplicative_expression '/' cast_expression
   93                          | multiplicative_expression '%' cast_expression

   94 cast_expression: unary_expression
   95                | '(' type_name ')' cast_expression

   96 unary_expression: postfix_expression
   97                 | INC_OP unary_expression
   98                 | DEC_OP unary_expression
   99                 | '&' unary_expression
  100                 | '*' unary_expression
  101                 | '+' unary_expression
  102                 | '-' unary_expression
  103                 | '~' unary_expression
  104                 | '!' unary_expression
  105                 | SIZEOF unary_expression
  106                 | SIZEOF '(' type_name ')'

  107 postfix_expression: primary_expression
  108                   | postfix_expression '[' expression ']'
  109                   | postfix_expression '(' ')'
  110                   | postfix_expression '(' argument_expression_list ')'
  111                   | postfix_expression '.' IDENTIFIER
  112                   | postfix_expression PTR_OP IDENTIFIER
  113                   | postfix_expression INC_OP
  114                   | postfix_expression DEC_OP

  115 argument_expression_list: assignment_expression
  116                         | argument_expression_list ',' assignment_expression

  117 primary_expression: IDENTIFIER
  118                   | INT_CONST
  119                   | FLOAT_CONST
  120                   | STRING_LITERAL
  121                   | CHAR_LITERAL
  122                   | '(' expression ')'

  123 selection_statement: IF '(' expression ')' statement
  124                    | IF '(' expression ')' statement ELSE statement
  125                    | SWITCH '(' expression ')' statement

  126 iteration_statement: WHILE '(' expression ')' statement
  127                    | DO statement WHILE '(' expression ')' ';'
  128                    | FOR '(' expression_statement expression_statement ')' statement
  129                    | FOR '(' expression_statement expression_statement expression ')' statement

  130 constant_expression: conditional_expression

  131 declaration: declaration_specifiers ';'
  132            | declaration_specifiers init_declarator_list ';'

  133 init_declarator_list: init_declarator
  134                     | init_declarator_list ',' init_declarator

  135 init_declarator: declarator
  136                | declarator '=' initializer

  137 storage_class_specifier: TYPEDEF
  138                        | EXTERN
  139                        | STATIC
  140                        | AUTO
  141                        | REGISTER

  142 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  143                          | struct_or_union '{' struct_declaration_list '}'
  144                          | struct_or_union IDENTIFIER

  145 struct_or_union: STRUCT
  146                | UNION

  147 struct_declaration_list: struct_declaration
  148                        | struct_declaration_list struct_declaration

  149 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  150 specifier_qualifier_list: type_specifier specifier_qualifier_list
  151                         | type_specifier
  152                         | type_qualifier specifier_qualifier_list
  153                         | type_qualifier

  154 struct_declarator_list: struct_declarator
  155                       | struct_declarator_list ',' struct_declarator

  156 struct_declarator: declarator
  157                  | ':' constant_expression
  158                  | declarator ':' constant_expression

  159 enum_specifier: ENUM '{' enumerator_list '}'
  160               | ENUM IDENTIFIER '{' enumerator_list '}'
  161               | ENUM IDENTIFIER

  162 enumerator_list: enumerator
  163                | enumerator_list ',' enumerator

  164 enumerator: IDENTIFIER
  165           | IDENTIFIER '=' constant_expression

  166 type_qualifier: CONST
  167               | VOLATILE

  168 pointer: '*'
  169        | '*' type_qualifier_list
  170        | '*' pointer
  171        | '*' type_qualifier_list pointer

  172 type_qualifier_list: type_qualifier
  173                    | type_qualifier_list type_qualifier

  174 parameter_type_list: parameter_list

  175 parameter_list: parameter_declaration
  176               | parameter_list ',' parameter_declaration

  177 parameter_declaration: declaration_specifiers declarator
  178                      | declaration_specifiers abstract_declarator
  179                      | declaration_specifiers

  180 identifier_list: IDENTIFIER
  181                | identifier_list ',' IDENTIFIER

  182 type_name: specifier_qualifier_list
  183          | specifier_qualifier_list abstract_declarator

  184 abstract_declarator: pointer
  185                    | direct_abstract_declarator
  186                    | pointer direct_abstract_declarator

  187 direct_abstract_declarator: '(' abstract_declarator ')'
  188                           | '[' ']'
  189                           | '[' constant_expression ']'
  190                           | direct_abstract_declarator '[' ']'
  191                           | direct_abstract_declarator '[' constant_expression ']'
  192                           | '(' ')'
  193                           | '(' parameter_type_list ')'
  194                           | direct_abstract_declarator '(' ')'
  195                           | direct_abstract_declarator '(' parameter_type_list ')'

  196 initializer: assignment_expression
  197            | '{' initializer_list '}'
  198            | '{' initializer_list ',' '}'

  199 initializer_list: initializer
  200                 | initializer_list ',' initializer

  201 labeled_statement: IDENTIFIER ':' statement
  202                  | CASE constant_expression ':' statement
  203                  | DEFAULT ':' statement

  204 declaration_list: declaration
  205                 | declaration_list declaration

  206 expression_statement: ';'
  207                     | expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 104
    '%' (37) 93
    '&' (38) 75 99
    '(' (40) 28 31 32 33 95 106 109 110 122 123 124 125 126 127 128 129 187 192 193 194 195
    ')' (41) 28 31 32 33 95 106 109 110 122 123 124 125 126 127 128 129 187 192 193 194 195
    '*' (42) 91 100 168 169 170 171
    '+' (43) 88 101
    ',' (44) 51 116 134 155 163 176 181 198 200
    '-' (45) 89 102
    '.' (46) 111
    '/' (47) 92
    ':' (58) 65 157 158 201 202 203
    ';' (59) 46 47 48 49 127 131 132 149 206 207
    '<' (60) 80
    '=' (61) 53 136 165
    '>' (62) 81
    '?' (63) 65
    '[' (91) 29 30 108 188 189 190 191
    ']' (93) 29 30 108 188 189 190 191
    '^' (94) 73
    '{' (123) 34 35 36 37 142 143 159 160 197 198
    '|' (124) 71
    '}' (125) 34 35 36 37 142 143 159 160 197 198
    '~' (126) 103
    error (256)
    INT_CONST <number> (258) 118
    FLOAT_CONST <numberFloat> (259) 119
    STRING_LITERAL <number> (260) 120
    IDENTIFIER <string> (261) 27 111 112 117 142 144 160 161 164 165 180 181 201
    CHAR_LITERAL <number> (262) 121
    SIZEOF (263) 105 106
    PTR_OP (264) 112
    INC_OP (265) 97 113
    DEC_OP (266) 98 114
    LEFT_OP (267) 85
    RIGHT_OP (268) 86
    LE_OP (269) 82
    GE_OP (270) 83
    EQ_OP (271) 77
    NE_OP (272) 78
    AND_OP (273) 69
    OR_OP (274) 67
    MUL_ASSIGN (275) 54
    DIV_ASSIGN (276) 55
    MOD_ASSIGN (277) 56
    ADD_ASSIGN (278) 57
    SUB_ASSIGN (279) 58
    LEFT_ASSIGN (280) 59
    RIGHT_ASSIGN (281) 60
    AND_ASSIGN (282) 61
    XOR_ASSIGN (283) 62
    OR_ASSIGN (284) 63
    TYPEDEF (285) 137
    EXTERN (286) 138
    STATIC (287) 139
    AUTO (288) 140
    REGISTER (289) 141
    CHAR (290) 17
    INT (291) 18
    SIGNED (292) 21
    UNSIGNED (293) 22
    FLOAT (294) 19
    DOUBLE (295) 20
    CONST (296) 166
    VOLATILE (297) 167
    VOID (298) 16
    STRUCT (299) 145
    UNION (300) 146
    ENUM (301) 159 160 161
    CASE (302) 202
    DEFAULT (303) 203
    IF (304) 123 124
    ELSE (305) 124
    SWITCH (306) 125
    WHILE (307) 126 127
    DO (308) 127
    FOR (309) 128 129
    CONTINUE (310) 46
    BREAK (311) 47
    RETURN (312) 48 49


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    ROOT (83)
        on left: 1
        on right: 0
    translation_unit <Base> (84)
        on left: 2 3
        on right: 1 3
    external_declaration <Base> (85)
        on left: 4 5
        on right: 2 3
    function_definition <Base> (86)
        on left: 6 7 8 9
        on right: 4
    declaration_specifiers <Base> (87)
        on left: 10 11 12 13 14 15
        on right: 6 7 11 13 15 131 132 177 178 179
    type_specifier <Base> (88)
        on left: 16 17 18 19 20 21 22 23 24
        on right: 12 13 150 151
    declarator <Base> (89)
        on left: 25 26
        on right: 6 7 8 9 28 135 136 156 158 177
    direct_declarator <Base> (90)
        on left: 27 28 29 30 31 32 33
        on right: 25 26 29 30 31 32 33
    compound_statement <Base> (91)
        on left: 34 35 36 37
        on right: 6 7 8 9 41
    statement_list <Base> (92)
        on left: 38 39
        on right: 35 37 39
    statement <Base> (93)
        on left: 40 41 42 43 44 45
        on right: 38 39 123 124 125 126 127 128 129 201 202 203
    jump_statement <Base> (94)
        on left: 46 47 48 49
        on right: 45
    expression <Base> (95)
        on left: 50 51
        on right: 49 51 65 108 122 123 124 125 126 127 129 207
    assignment_expression <Base> (96)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 50 51 53 54 55 56 57 58 59 60 61 62 63 115 116 196
    conditional_expression <Base> (97)
        on left: 64 65
        on right: 52 65 130
    logical_or_expression <Base> (98)
        on left: 66 67
        on right: 64 65 67
    logical_and_expression <Base> (99)
        on left: 68 69
        on right: 66 67 69
    inclusive_or_expression <Base> (100)
        on left: 70 71
        on right: 68 69 71
    exclusive_or_expression <Base> (101)
        on left: 72 73
        on right: 70 71 73
    and_expression <Base> (102)
        on left: 74 75
        on right: 72 73 75
    equality_expression <Base> (103)
        on left: 76 77 78
        on right: 74 75 77 78
    relational_expression <Base> (104)
        on left: 79 80 81 82 83
        on right: 76 77 78 80 81 82 83
    shift_expression <Base> (105)
        on left: 84 85 86
        on right: 79 80 81 82 83 85 86
    additive_expression <Base> (106)
        on left: 87 88 89
        on right: 84 85 86 88 89
    multiplicative_expression <Base> (107)
        on left: 90 91 92 93
        on right: 87 88 89 91 92 93
    cast_expression <Base> (108)
        on left: 94 95
        on right: 90 91 92 93 95
    unary_expression <Base> (109)
        on left: 96 97 98 99 100 101 102 103 104 105 106
        on right: 53 54 55 56 57 58 59 60 61 62 63 94 97 98 99 100 101 102 103 104 105
    postfix_expression <Base> (110)
        on left: 107 108 109 110 111 112 113 114
        on right: 96 108 109 110 111 112 113 114
    argument_expression_list <Base> (111)
        on left: 115 116
        on right: 110 116
    primary_expression <Base> (112)
        on left: 117 118 119 120 121 122
        on right: 107
    selection_statement <Base> (113)
        on left: 123 124 125
        on right: 43
    iteration_statement <Base> (114)
        on left: 126 127 128 129
        on right: 44
    constant_expression <Base> (115)
        on left: 130
        on right: 29 157 158 165 189 191 202
    declaration <Base> (116)
        on left: 131 132
        on right: 5 204 205
    init_declarator_list <Base> (117)
        on left: 133 134
        on right: 132 134
    init_declarator <Base> (118)
        on left: 135 136
        on right: 133 134
    storage_class_specifier (119)
        on left: 137 138 139 140 141
        on right: 10 11
    struct_or_union_specifier (120)
        on left: 142 143 144
        on right: 23
    struct_or_union (121)
        on left: 145 146
        on right: 142 143 144
    struct_declaration_list <Base> (122)
        on left: 147 148
        on right: 142 143 148
    struct_declaration <Base> (123)
        on left: 149
        on right: 147 148
    specifier_qualifier_list <Base> (124)
        on left: 150 151 152 153
        on right: 149 150 152 182 183
    struct_declarator_list <Base> (125)
        on left: 154 155
        on right: 149 155
    struct_declarator <Base> (126)
        on left: 156 157 158
        on right: 154 155
    enum_specifier <Base> (127)
        on left: 159 160 161
        on right: 24
    enumerator_list <Base> (128)
        on left: 162 163
        on right: 159 160 163
    enumerator <Base> (129)
        on left: 164 165
        on right: 162 163
    type_qualifier (130)
        on left: 166 167
        on right: 14 15 152 153 172 173
    pointer <Base> (131)
        on left: 168 169 170 171
        on right: 25 170 171 184 186
    type_qualifier_list (132)
        on left: 172 173
        on right: 169 171 173
    parameter_type_list <Base> (133)
        on left: 174
        on right: 31 193 195
    parameter_list <Base> (134)
        on left: 175 176
        on right: 174 176
    parameter_declaration <Base> (135)
        on left: 177 178 179
        on right: 175 176
    identifier_list <Base> (136)
        on left: 180 181
        on right: 32 181
    type_name <Base> (137)
        on left: 182 183
        on right: 95 106
    abstract_declarator <Base> (138)
        on left: 184 185 186
        on right: 178 183 187
    direct_abstract_declarator <Base> (139)
        on left: 187 188 189 190 191 192 193 194 195
        on right: 185 186 190 191 194 195
    initializer <Base> (140)
        on left: 196 197 198
        on right: 136 199 200
    initializer_list <Base> (141)
        on left: 199 200
        on right: 197 198 200
    labeled_statement <Base> (142)
        on left: 201 202 203
        on right: 40
    declaration_list <Base> (143)
        on left: 204 205
        on right: 6 8 36 37 205
    expression_statement <Base> (144)
        on left: 206 207
        on right: 42 128 129


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    INT         shift, and go to state 8
    SIGNED      shift, and go to state 9
    UNSIGNED    shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    CONST       shift, and go to state 13
    VOLATILE    shift, and go to state 14
    VOID        shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    ROOT                       go to state 21
    translation_unit           go to state 22
    external_declaration       go to state 23
    function_definition        go to state 24
    declaration_specifiers     go to state 25
    type_specifier             go to state 26
    declarator                 go to state 27
    direct_declarator          go to state 28
    declaration                go to state 29
    storage_class_specifier    go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    pointer                    go to state 35


State 1

   27 direct_declarator: IDENTIFIER .

    $default  reduce using rule 27 (direct_declarator)


State 2

  137 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 137 (storage_class_specifier)


State 3

  138 storage_class_specifier: EXTERN .

    $default  reduce using rule 138 (storage_class_specifier)


State 4

  139 storage_class_specifier: STATIC .

    $default  reduce using rule 139 (storage_class_specifier)


State 5

  140 storage_class_specifier: AUTO .

    $default  reduce using rule 140 (storage_class_specifier)


State 6

  141 storage_class_specifier: REGISTER .

    $default  reduce using rule 141 (storage_class_specifier)


State 7

   17 type_specifier: CHAR .

    $default  reduce using rule 17 (type_specifier)


State 8

   18 type_specifier: INT .

    $default  reduce using rule 18 (type_specifier)


State 9

   21 type_specifier: SIGNED .

    $default  reduce using rule 21 (type_specifier)


State 10

   22 type_specifier: UNSIGNED .

    $default  reduce using rule 22 (type_specifier)


State 11

   19 type_specifier: FLOAT .

    $default  reduce using rule 19 (type_specifier)


State 12

   20 type_specifier: DOUBLE .

    $default  reduce using rule 20 (type_specifier)


State 13

  166 type_qualifier: CONST .

    $default  reduce using rule 166 (type_qualifier)


State 14

  167 type_qualifier: VOLATILE .

    $default  reduce using rule 167 (type_qualifier)


State 15

   16 type_specifier: VOID .

    $default  reduce using rule 16 (type_specifier)


State 16

  145 struct_or_union: STRUCT .

    $default  reduce using rule 145 (struct_or_union)


State 17

  146 struct_or_union: UNION .

    $default  reduce using rule 146 (struct_or_union)


State 18

  159 enum_specifier: ENUM . '{' enumerator_list '}'
  160               | ENUM . IDENTIFIER '{' enumerator_list '}'
  161               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 36
    '{'         shift, and go to state 37


State 19

   28 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    declarator         go to state 38
    direct_declarator  go to state 28
    pointer            go to state 35


State 20

  168 pointer: '*' .
  169        | '*' . type_qualifier_list
  170        | '*' . pointer
  171        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 13
    VOLATILE  shift, and go to state 14
    '*'       shift, and go to state 20

    $default  reduce using rule 168 (pointer)

    type_qualifier       go to state 39
    pointer              go to state 40
    type_qualifier_list  go to state 41


State 21

    0 $accept: ROOT . $end

    $end  shift, and go to state 42


State 22

    1 ROOT: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    INT         shift, and go to state 8
    SIGNED      shift, and go to state 9
    UNSIGNED    shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    CONST       shift, and go to state 13
    VOLATILE    shift, and go to state 14
    VOID        shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    $default  reduce using rule 1 (ROOT)

    external_declaration       go to state 43
    function_definition        go to state 24
    declaration_specifiers     go to state 25
    type_specifier             go to state 26
    declarator                 go to state 27
    direct_declarator          go to state 28
    declaration                go to state 29
    storage_class_specifier    go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    pointer                    go to state 35


State 23

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 24

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 25
